--- a/Eventify/Views/_ViewImports.cshtml
+++ b/Eventify/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using Eventify.ViewModels.ProfileVM
 @using Eventify.ViewModels.EventVM
 @using Eventify.ViewModels.VenueVM
+@using Eventify.ViewModels.AdminVm
 @using System.Security.Claims
 @using Eventify.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
